# FlightLoop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/flightloop/frames/: reference_frames.h  rotation.h
include/flightloop/integrator/: integrator.h  rhs.h  rk4_integrator.h
include/flightloop/ode/: rhs.h
include/flightloop/signals/: port.h  signal.h
include/flightloop/state/: state_block.h  state_block_view.h  state_registry.h
src/integrator/: CMakeLists.txt  integrator.cc  rk4_integrator.cc
src/state/: CMakeLists.txt  state_block_view.cc  state_registry.cc
tests/unit/frames/: rotation_test.cc
tests/unit/integrator/: rk4_integrator_test.cc
tests/unit/state/: state_block_view_test.cc  state_registry_test.cc
